// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StringLiteral > (" "); 1`] = `
{
  "body": [
    {
      "end": 6,
      "expression": {
        "end": 4,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
          },
          "start": {
            "column": 1,
            "line": 1,
          },
        },
        "range": [
          1,
          4,
        ],
        "start": 1,
        "type": "Literal",
        "value": " ",
      },
      "loc": {
        "end": {
          "column": 6,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        6,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 6,
  "loc": {
    "end": {
      "column": 6,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    6,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`StringLiteral > (" "); 1`] = `
{
  "body": [
    {
      "end": 6,
      "expression": {
        "end": 4,
        "loc": {
          "end": {
            "column": 4,
            "line": 1,
          },
          "start": {
            "column": 1,
            "line": 1,
          },
        },
        "range": [
          1,
          4,
        ],
        "start": 1,
        "type": "Literal",
        "value": " ",
      },
      "loc": {
        "end": {
          "column": 6,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "range": [
        0,
        6,
      ],
      "start": 0,
      "type": "ExpressionStatement",
    },
  ],
  "end": 6,
  "loc": {
    "end": {
      "column": 6,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "range": [
    0,
    6,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;
